if (USE_MESH)
    add_subdirectory(AdaptiveMesh)
    add_subdirectory(DrawGrid)
    add_subdirectory(DrawGridTests)
    add_subdirectory(GridGen)
    add_subdirectory(GridTools)
endif (USE_MESH)
if (USE_OPTIMIZER)
    add_subdirectory(OptimizerSolve)
    add_subdirectory(OptimizerFunction)
endif ()
if (USE_SOLVER)
    add_subdirectory(DrawMatrix)
    add_subdirectory(MatSolve)
endif (USE_SOLVER)
if (USE_SOLVER AND USE_MESH)
    add_subdirectory(FVDiscr)
    add_subdirectory(Solver)
endif (USE_SOLVER AND USE_MESH)
if (USE_AUTODIFF AND USE_SOLVER AND USE_MESH)
    add_subdirectory(ADFVDiscr)
    add_subdirectory(ADMFD)
    add_subdirectory(ADVDIFF)
    add_subdirectory(TestSuite)
    add_subdirectory(MFD-ES)
endif (USE_AUTODIFF AND USE_SOLVER AND USE_MESH)
#add_subdirectory(OctreeCutcell)
if (USE_MESH AND USE_PARTITIONER)
    #add_subdirectory(Octree)
endif (USE_MESH AND USE_PARTITIONER)
if (USE_ANI_INMOST_EXAMPLES)
    if (DEFINED ENV{ANI_DIR})
        message("ANI_DIR is defined")
        add_subdirectory(Ani_Inmost)
    else ()
        MESSAGE("ANI_DIR IS NOT_DEFINED. Compilation of ani_inmost_examples failed")
    endif ()
endif ()
