project(ADVDIFF)
set(SOURCE main.cpp stencil.cpp checks.cpp limited_average.cpp save_mesh.cpp conv_diff.cpp)
set(HEADER stencil.h checks.h limited_average.h save_mesh.h conv_diff.h)

add_executable(ADVDIFF ${SOURCE} ${HEADER})

target_link_libraries(ADVDIFF inmost)

if(USE_SOLVER)
  if(USE_SOLVER_ANI)
    message("linking ADVDIFF with ani3d and BLAS")
    target_link_libraries(ADVDIFF ani3d ${BLAS_LIBRARIES})
    if(BLAS_LINKER_FLAGS)
      set_target_properties(ADVDIFF PROPERTIES LINK_FLAGS "${BLAS_LINKER_FLAGS}")
    endif()
  endif()
  if(USE_SOLVER_PETSC)
    message("linking ADVDIFF with PETSc")
    target_link_libraries(ADVDIFF ${PETSC_LIBRARIES})
  endif()
  if(USE_SOLVER_TRILINOS)
    message("linking ADVDIFF with Trilinos")
    target_link_libraries(ADVDIFF ${Trilinos_LIBRARIES} ${Trilinos_TPL_LIBRARIES})
  endif()
  if(USE_SOLVER_METIS)
    message("linking ADVDIFF with Metis")
    target_link_libraries(ADVDIFF ${METIS_LIBRARIES})
  endif()
  if(USE_SOLVER_MONDRIAAN)
    message("linking ADVDIFF with Mondriaan")
    target_link_libraries(ADVDIFF ${MONDRIAAN_LIBRARIES})
  endif()
  if(USE_SOLVER_SUPERLU)
    message("linking ADVDIFF with SuperLU")
    target_link_libraries(ADVDIFF ${SUPERLU_LIBRARIES})
  endif()
endif()


if(USE_PARTITIONER)
  if(USE_PARTITIONER_ZOLTAN)
    message("linking ADVDIFF with Zoltan")
    target_link_libraries(ADVDIFF ${ZOLTAN_LIBRARIES})
  endif()
  if(USE_PARTITIONER_PARMETIS)
    message("linking ADVDIFF with ParMETIS")
    target_link_libraries(ADVDIFF ${PARMETIS_LIBRARIES})
  endif()
endif()

if(USE_MPI)
  message("linking ADVDIFF with MPI")
  target_link_libraries(ADVDIFF ${MPI_LIBRARIES}) 
  if(MPI_LINK_FLAGS)
    set_target_properties(ADVDIFF PROPERTIES LINK_FLAGS "${MPI_LINK_FLAGS}")
  endif() 
endif(USE_MPI)

install(TARGETS ADVDIFF EXPORT inmost-targets RUNTIME DESTINATION bin)